# magna

./: .gitignore  CMakeLists.txt  build.bat  build.sh  factory.cpp  factory.h  main.cpp  resource.cpp  resource.h  run.bat  run.sh
old-src/: colony.cpp  colony.h  factories.cpp  factories.h
old-src/old-src/: factory.cpp  factory.h  main.h  resource.cpp
src/: AI.cpp  AI.h  CMakeLists.txt  algorithms.cpp  algorithms.h  celestial.cpp  celestial.h  characters.h  colony.cpp  colony.h  factory.cpp  factory.h  galaxy.cpp  galaxy.h  generateSol.cpp  generateSol.h  main.cpp  main.h  resource.h  resources.cpp  resources.h  shipParts.cpp  shipParts.h  ships.cpp  ships.h  structures.h  system.cpp  system.h
src/gui/: gui.cpp  gui.h  sfml.h
src/render/: renderSystem.cpp  renderSystem.h  solarsystem.cpp  solarsystem.h  textures.cpp  textures.h
texture/: textures
